# tu_turno_gusano

./: .gitignore  README.md  appveyor.yml  main.py  pyproject.toml  requirements.txt  turno-gusano.sh
turno_gusano/: __init__.py  twitch.py
